added nonfunctional right-click popup menu fo robjects

--- a/public/index.html
+++ b/public/index.html
@@ -166,11 +166,27 @@
       </div>
       <!-- END TOOLBAR -->
 
+      <!-- POPUP TOOLBAR -->
+      <div id='popup_toolbar'>
+        <img class='tool' data-tool='pointer' src='img/tools/pointer.svg'/>
+        <img class='tool' data-tool='rectangle' src='img/tools/rectangle.svg'/>
+        <img class='tool' data-tool='circle' src='img/tools/circle.svg'/>
+        <img class='tool' data-tool='note' src='img/tools/note.svg'/>
+        <img class='tool' data-tool='text' src='img/tools/text.svg'/>
+        <img class='tool' data-tool='image' src='img/tools/image.svg'/>
+        <img class='tool' data-tool='arrow' src='img/tools/arrow.svg'/>
+        <img class='tool' data-tool='connector' src='img/tools/connector.svg'/>
+        <div id='popup_color_picker'>&nbsp;</div>
+      </div>
+      <!-- END TOOLBAR -->
+
+      
+
 
       <!-- UPLOAD BUCKET -->
-      <div id='upload_area'>
+      <!-- <div id='upload_area'>
         <h1>Drag files here to upload</h1>
-      </div>
+      </div> -->
 
       
 
