added color stuff

--- a/public/index.html
+++ b/public/index.html
@@ -161,22 +161,17 @@
         <img class='tool' data-tool='arrow' src='img/tools/arrow.svg'/>
         <img class='tool' data-tool='connector' src='img/tools/connector.svg'/>
 
-        <div id='color_picker'>&nbsp;</div>
+        <div id='color_picker' class='color_picker_btn'>&nbsp;</div>
 
       </div>
       <!-- END TOOLBAR -->
 
       <!-- POPUP TOOLBAR -->
       <div id='popup_toolbar'>
-        <img class='tool' data-tool='pointer' src='img/tools/pointer.svg'/>
-        <img class='tool' data-tool='rectangle' src='img/tools/rectangle.svg'/>
-        <img class='tool' data-tool='circle' src='img/tools/circle.svg'/>
-        <img class='tool' data-tool='note' src='img/tools/note.svg'/>
-        <img class='tool' data-tool='text' src='img/tools/text.svg'/>
-        <img class='tool' data-tool='image' src='img/tools/image.svg'/>
-        <img class='tool' data-tool='arrow' src='img/tools/arrow.svg'/>
-        <img class='tool' data-tool='connector' src='img/tools/connector.svg'/>
-        <div id='popup_color_picker'>&nbsp;</div>
+        <div id='popup_color_picker' class='color_picker_btn'>&nbsp;</div>
+        <div id='popup_color_picker_border' class='color_picker_btn'>&nbsp;</div>
+        <img class='tool' data-tool='linetype' src='img/tools/linetype.svg'/>
+        <img class='tool' data-tool='trash' src='img/tools/trash.svg'/>
       </div>
       <!-- END TOOLBAR -->
 
